syntax = "proto3";
import "Protos/enums.proto";

option csharp_namespace = "GrpcDemo.Services";

service MeterReadingService{
  rpc AddReading(ReadingMessage) returns (StatusMessage);
}



message ReadingMessage{
  int32 customerId = 1;
  int32 readingValue = 2;
  string notes = 3;
  ReadingStatus successful = 4;
}

message StatusMessage{
  string message = 1;
  ReadingStatus success = 2;
}